# ktb-ai-week-langchain-server

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  GUIDE_개발현황.md  PIPELINE_DIAGRAM.md  PLAN_랭체인_파이프라인.md  developer_profile_fixed_schema_key01.json  pyproject.toml  requirements.txt  test_result.json  user_profile_choi_sungmin01.json  기획서.md  랭체인 기획안.md  컬처핏의 중요성 - 근거자료 모음.md
api/: __init__.py  app.py
api/langchain_pipeline/: config.py  main.py
api/langchain_pipeline/chains/: applicant_chain.py  company_chain.py  compare_chain.py
api/langchain_pipeline/loaders/: __init__.py  local_pdf_loader.py  s3_pdf_loader.py
api/langchain_pipeline/prompts/: __init__.py  applicant_analyze.py  company_culture_analyze.py  company_data_collect.py  culture_compare.py
api/routers/: __init__.py  culture_fit.py
api/schemas/: __init__.py  requests.py  responses.py
api/services/: __init__.py  pipeline.py
langchain_pipeline/: __init__.py  config.py  main.py
langchain_pipeline/chains/: __init__.py  applicant_chain.py  company_chain.py  compare_chain.py
langchain_pipeline/loaders/: __init__.py
langchain_pipeline/prompts/: applicant_analyze.py  company_culture_analyze.py  company_data_collect.py  culture_compare.py
langchain_pipeline/schemas/: company_schema.json
langchain_pipeline/scrapers/: __init__.py  base_scraper.py  browser_scraper.py  gemini_scraper.py  jina_scraper.py
langchain_pipeline/utils/: db_handler.py  schema_loader.py
scripts/: test_company_pipeline.py  test_s3_pdf_loader.py  test_scraper.py
tests/: test_chains.py
(+11 files in other folders)
